[gd_scene load_steps=28 format=3 uid="uid://2a2kb6vkospx"]

[ext_resource type="PackedScene" uid="uid://bqpc7vc0h2w81" path="res://Scenes/3DViewport.tscn" id="1_1xuwo"]
[ext_resource type="Theme" uid="uid://cxi7ihqtqqtu6" path="res://Themes/darkTheme.tres" id="1_50egg"]
[ext_resource type="Script" path="res://addons/dockable_container/dockable_container.gd" id="1_jbcfn"]
[ext_resource type="Script" path="res://Scripts/App.gd" id="2_3s3tk"]
[ext_resource type="Script" path="res://addons/dockable_container/layout_panel.gd" id="2_uu0la"]
[ext_resource type="Script" path="res://Scripts/AreaSplitContainer.gd" id="3_iy3mc"]
[ext_resource type="Script" path="res://addons/dockable_container/layout.gd" id="3_jkhko"]
[ext_resource type="Script" path="res://addons/dockable_container/layout_split.gd" id="4_cmp6u"]
[ext_resource type="Script" path="res://addons/ReorderableContainer/reorderable_container.gd" id="6_ymwgp"]
[ext_resource type="Script" path="res://Scripts/3DPreviewViewport.gd" id="7_elaff"]
[ext_resource type="Script" path="res://Scenes/LayerManager.gd" id="8_7c28x"]
[ext_resource type="Texture2D" uid="uid://b4wwpfijfexfa" path="res://HDRIs/empty_workshop_4k.exr" id="8_7hkbj"]
[ext_resource type="PackedScene" uid="uid://bk6xt62j3yiba" path="res://Scenes/layer_ui_fill.tscn" id="9_drtng"]
[ext_resource type="Texture2D" uid="uid://bb8ag0uuxyydx" path="res://godotIcon.svg" id="11_q5ru4"]
[ext_resource type="Texture2D" uid="uid://bjbxfl5efns4p" path="res://textures/icons/VerticalAreaSplitIcon.png" id="15_1vikl"]
[ext_resource type="Texture2D" uid="uid://dtunlx2s2kyqk" path="res://textures/icons/HorizontalAreaSplitIcon.png" id="16_uorpf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk4ew"]
bg_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="Theme" id="Theme_d6vfy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46t71"]
bg_color = Color(0.099986, 0.099986, 0.099986, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28k06"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f0p5"]
bg_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6qsb"]
bg_color = Color(0.10748, 0.10748, 0.10748, 1)

[sub_resource type="Resource" id="Resource_wodr5"]
resource_name = "Tabs"
script = ExtResource("2_uu0la")
names = PackedStringArray("2D preview")
current_tab = 0

[sub_resource type="Resource" id="Resource_sp562"]
resource_name = "Tabs"
script = ExtResource("2_uu0la")
names = PackedStringArray("Layer settings", "Brush settings")
current_tab = 0

[sub_resource type="Resource" id="Resource_ujdoo"]
resource_name = "Split"
script = ExtResource("4_cmp6u")
direction = 0
percent = 0.780656
first = SubResource("Resource_wodr5")
second = SubResource("Resource_sp562")

[sub_resource type="Resource" id="Resource_oyvfb"]
resource_name = "Layout"
script = ExtResource("3_jkhko")
root = SubResource("Resource_ujdoo")
hidden_tabs = {}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_drb8g"]
color = Color(0.129412, 0.52549, 0.898039, 1)
thickness = 8

[node name="AlterPainter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_50egg")
script = ExtResource("2_3s3tk")
metadata/_edit_use_anchors_ = true

[node name="3D preview settings window" type="Window" parent="."]
title = "3D preview settings"
initial_position = 2
size = Vector2i(515, 512)
visible = false

[node name="Control" type="Control" parent="3D preview settings window"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_50egg")
metadata/_edit_use_anchors_ = true

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fk4ew")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="AppEditPanel" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/AppEditPanel"]
layout_mode = 2

[node name="project settings button" type="MenuButton" parent="VBoxContainer/AppEditPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_d6vfy")
text = "File"
flat = false
item_count = 5
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Save As"
popup/item_3/id = 3
popup/item_4/text = "Export"
popup/item_4/id = 4

[node name="3D preview settings button" type="MenuButton" parent="VBoxContainer/AppEditPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Edit"
flat = false
item_count = 2
popup/item_0/text = "undo"
popup/item_0/id = 0
popup/item_1/text = "redo"
popup/item_1/id = 1

[node name="V_AreaSplit" type="SplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 235
vertical = true
script = ExtResource("3_iy3mc")

[node name="H_AreaSplit" type="SplitContainer" parent="VBoxContainer/V_AreaSplit"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 1500
script = ExtResource("3_iy3mc")

[node name="Preview3DArea" type="Panel" parent="VBoxContainer/V_AreaSplit/H_AreaSplit"]
clip_children = 1
custom_minimum_size = Vector2(27, 24)
layout_mode = 2
mouse_filter = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/Preview3DArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/Preview3DArea/SubViewportContainer"]
handle_input_locally = false
msaa_3d = 3
scaling_3d_mode = 2
size = Vector2i(1500, 750)
render_target_update_mode = 4
script = ExtResource("7_elaff")

[node name="Node3D" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/Preview3DArea/SubViewportContainer/SubViewport" instance=ExtResource("1_1xuwo")]

[node name="RenderModePickButton" type="OptionButton" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/Preview3DArea"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.927333
anchor_top = 0.0145349
anchor_right = 0.984667
anchor_bottom = 0.0290698
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 1
item_count = 6
selected = 0
popup/item_0/text = "default"
popup/item_0/id = 0
popup/item_1/text = "albedo"
popup/item_1/id = 1
popup/item_2/text = "normal_map"
popup/item_2/id = 2
popup/item_3/text = "roughness"
popup/item_3/id = 3
popup/item_4/text = "metalness"
popup/item_4/id = 4
popup/item_5/text = "heightmap"
popup/item_5/id = 5
metadata/_edit_use_anchors_ = true

[node name="LayersArea" type="VBoxContainer" parent="VBoxContainer/V_AreaSplit/H_AreaSplit"]
custom_minimum_size = Vector2(27, 24)
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("8_7c28x")

[node name="list scroll" type="ScrollContainer" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_46t71")

[node name="List" type="Container" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list scroll" node_paths=PackedStringArray("scroll_container")]
process_mode = 1
custom_minimum_size = Vector2(0, 46)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_ymwgp")
hold_duration = 0.1
speed = 30.0
separation = 5
is_vertical = true
scroll_container = NodePath("..")

[node name="Layer_ui_fill" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list scroll/List" instance=ExtResource("9_drtng")]
layout_mode = 2

[node name="list edit" type="Panel" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_28k06")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="buttons list" type="HBoxContainer" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list edit/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="addNewLayer_button" type="Button" parent="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list edit/MarginContainer/buttons list"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "add new layer"
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
text = "add"
text_overrun_behavior = 2
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="Asset Browser" type="SplitContainer" parent="VBoxContainer/V_AreaSplit"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200
script = ExtResource("3_iy3mc")

[node name="Tree" type="Tree" parent="VBoxContainer/V_AreaSplit/Asset Browser"]
layout_mode = 2
mouse_filter = 1

[node name="ItemList" type="ItemList" parent="VBoxContainer/V_AreaSplit/Asset Browser"]
layout_mode = 2
mouse_filter = 1
item_count = 2
max_columns = 10
same_column_width = true
fixed_icon_size = Vector2i(80, 80)
item_0/text = ""
item_0/icon = ExtResource("11_q5ru4")
item_1/text = ""
item_1/icon = ExtResource("11_q5ru4")

[node name="Separator" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5f0p5")

[node name="AppBottomInfo" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s6qsb")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/AppBottomInfo"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/AppBottomInfo/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ShortcutInfoLabel" type="Label" parent="VBoxContainer/AppBottomInfo/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "shortcut info and stuff here"

[node name="appVersionLabel" type="Label" parent="VBoxContainer/AppBottomInfo/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "0.0.0"

[node name="DockableContainer" type="Container" parent="VBoxContainer"]
process_mode = 4
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_jbcfn")
tab_alignment = 0
use_hidden_tabs_for_min_size = true
layout = SubResource("Resource_oyvfb")

[node name="2D preview" type="TextureRect" parent="VBoxContainer/DockableContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
texture = ExtResource("8_7hkbj")
expand_mode = 1

[node name="Brush settings" type="ScrollContainer" parent="VBoxContainer/DockableContainer"]
visible = false
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
theme = ExtResource("1_50egg")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DockableContainer/Brush settings"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_50egg")

[node name="size_setting" type="MarginContainer" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_50egg")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer/size_setting"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_50egg")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer/size_setting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_50egg")
text = "size"

[node name="HSlider" type="HSlider" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer/size_setting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_50egg")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_drb8g")
value = 34.0
scrollable = false

[node name="opacity_setting" type="MarginContainer" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_50egg")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer/opacity_setting"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_50egg")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer/opacity_setting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_50egg")
text = "opacity"

[node name="HSlider" type="HSlider" parent="VBoxContainer/DockableContainer/Brush settings/VBoxContainer/opacity_setting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_50egg")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_drb8g")
value = 34.0
scrollable = false

[node name="Layer settings" type="ScrollContainer" parent="VBoxContainer/DockableContainer"]
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
theme = ExtResource("1_50egg")

[node name="Panel" type="Panel" parent="VBoxContainer/DockableContainer/Layer settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DockOptionsPopup" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(173, 205)
always_on_top = true
item_count = 7
item_0/text = "Area Options"
item_0/id = 5
item_0/separator = true
item_1/text = ""
item_1/id = 5
item_1/separator = true
item_2/text = "Vertical Split"
item_2/icon = ExtResource("15_1vikl")
item_2/id = 0
item_3/text = "Horizontal Split"
item_3/icon = ExtResource("16_uorpf")
item_3/id = 1
item_4/text = ""
item_4/id = 5
item_4/separator = true
item_5/text = "Join Areas"
item_5/id = 2
item_6/text = "Swap Areas"
item_6/id = 3

[node name="SplitAreaDrawLayer" type="CanvasLayer" parent="."]

[node name="SplitLine" type="Line2D" parent="SplitAreaDrawLayer"]
unique_name_in_owner = true
points = PackedVector2Array(0, 60, 200, 60)
width = 1.0

[connection signal="item_selected" from="VBoxContainer/V_AreaSplit/H_AreaSplit/Preview3DArea/RenderModePickButton" to="VBoxContainer/V_AreaSplit/H_AreaSplit/Preview3DArea/SubViewportContainer/SubViewport" method="selectRenderMode"]
[connection signal="sort_children" from="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list scroll/List" to="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list scroll/List" method="_on_sort_children"]
[connection signal="pressed" from="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea/list edit/MarginContainer/buttons list/addNewLayer_button" to="VBoxContainer/V_AreaSplit/H_AreaSplit/LayersArea" method="add_new_fill_layer"]
